update other menu

--- a/src/styles/notice.css
+++ b/src/styles/notice.css
@@ -13,7 +13,7 @@
   background-position: 0px -180px;
 }
 
-.bottom ul {
+.bottom .box ul {
   width: 380px;
   height: 250px;
   position: absolute;
