--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,3 +82,14 @@ html {
 .go2072408551 {
   font-size: small;
 }
+
+.custom-select:focus {
+  outline: 0;
+  border: 1px solid #4c3023;
+  box-shadow: 0px 0px 10px #4c3023;
+}
+.custom-select {
+  outline: 0;
+  border: 1px solid #4c3023;
+  box-shadow: 0px 0px 10px #4c3023;
+}
