--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -93,3 +93,19 @@ html {
   border: 1px solid #4c3023;
   box-shadow: 0px 0px 10px #4c3023;
 }
+
+.custom-scroll-bar::-webkit-scrollbar {
+  width: 4px;
+  height: 12px;
+}
+
+.custom-scroll-bar::-webkit-scrollbar-thumb {
+  background: #434343;
+  border-radius: 16px;
+  box-shadow: inset 2px 2px 2px hsla(0, 0%, 100%, 0.25),
+    inset -2px -2px 2px rgba(0, 0, 0, 0.25);
+}
+
+.custom-scroll-bar::-webkit-scrollbar-track {
+  background: linear-gradient(90deg, #434343, #434343 1px, #111 0, #111);
+}
